# pydirectus

./: .gitignore  CHANGELOG.md  README.md  data_dumper.py  pyproject.toml
.github/workflows/: python-publish.yml
pydirectus/: __init__.py  collection.py  collection_test.py  directus.py  field.py  file.py  folder.py  query.py  query_test.py  session.py  session_test.py  test_fixtures.py  test_session.py  translation.py  typing.py
pydirectus/test_data/collections/: books.json  test.json
pydirectus/test_data/fields/: books.json  test.json
utils/: data_dumper.py
