[project]
name = "pydirectus-sdk"
version = "0.2.9"
description = "Python SDK for Directus"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "rich>=13.8.1",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.setuptools]
packages = ["pydirectus"]
